--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,25 +9,41 @@ layout: default
 
   {{ content }}
 
-  {%- if site.posts.size > 0 -%}
-    <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2>
-    <ul class="post-list">
-      {%- for post in site.posts -%}
-      <li>
-        {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-        <span class="post-meta">{{ post.date | date: date_format }}</span>
-        <h3>
-          <a class="post-link" href="{{ post.url | relative_url }}">
-            {{ post.title | escape }}
+  {%- if site.constants.size > 0 -%}
+    <div class="float-right">
+      <h3 class="constants-list-heading">Mathematical Constants</h3>
+      <ul class="constants-list">
+        {%- for constants in site.constants -%}
+        <li>
+          <a class="constants-link" href="{{ constants.url | absolute_url }}">
+            {{ constants.title | espace }}
           </a>
-        </h3>
-        {%- if site.show_excerpts -%}
-          {{ post.excerpt }}
-        {%- endif -%}
-      </li>
-      {%- endfor -%}
-    </ul>
+        </li>
+        {%- endfor -%}
+      </ul>
+    </div>
+  {%- endif -%}
 
+  {%- if site.posts.size > 0 -%}
+    <div class="">
+      <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2>
+      <ul class="post-list">
+        {%- for post in site.posts -%}
+        <li>
+          {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
+          <span class="post-meta">{{ post.date | date: date_format }}</span>
+          <h3>
+            <a class="post-link" href="{{ post.url | relative_url }}">
+              {{ post.title | escape }}
+            </a>
+          </h3>
+          {%- if site.show_excerpts -%}
+            {{ post.excerpt }}
+          {%- endif -%}
+        </li>
+        {%- endfor -%}
+      </ul>
+    </div>
   {%- endif -%}
 
 </div>
